--- a/bibliography.bib
+++ b/bibliography.bib
@@ -17,6 +17,12 @@
   year = {1975}
 }
 
+@misc{xkcd,
+  title = {Twitter and Shannon},
+  howpublished = {\url{https://what-if.xkcd.com/34/}},
+  note = {Accessed: 2019-08-03}
+}
+
 @book{Cover_91,
   author = {Cover, T. M. and Thomas, J. A.},
   month = aug,
@@ -77,7 +83,16 @@
   year = 2001,
   month = Nov,
 }
-
+@article{huffman1952method,
+  title={A method for the construction of minimum-redundancy codes},
+  author={Huffman, David A},
+  journal={Proceedings of the IRE},
+  volume={40},
+  number={9},
+  pages={1098--1101},
+  year={1952},
+  publisher={IEEE}
+}
 
 @article{Karush_61, 
   author={Karush, J.}, 
@@ -89,7 +104,12 @@
   number={2}, 
   pages={118}, 
 }
-
+@book{mackay2003information,
+  title={Information theory, inference and learning algorithms},
+  author={MacKay, David JC},
+  year={2003},
+  publisher={Cambridge university press}
+}
 @article{McMillan_56,
   author = {McMillan, B.},
   title = {Two inequalities implied by unique decipherability},
@@ -98,6 +118,21 @@
   month = {12},
   volume = {2},
   pages = {115-116}
+}
+@book{Salomon2010,
+  title={Handbook of data compression},
+  author={Salomon, David and Motta, Giovanni},
+  year={2010},
+  publisher={Springer Science \& Business Media}
+}
+@inproceedings{sardinas1953necessary,
+  title={A necessary and sufficient condition for unique decomposition of coded messages},
+  author={Sardinas, August Albert and Patterson, George W},
+  booktitle={Proceedings of the Institute of Radio Engineers},
+  volume={41},
+  number={3},
+  pages={425--425},
+  year={1953}
 }
 @article{Shannon_48,
   author = {C. E. Shannon},
