up to first draft of w3

--- a/main.tex
+++ b/main.tex
@@ -114,7 +114,7 @@
 
 \include{chapters/Chapter7-measures_of_information}
 \include{chapters/Chapter8-source_coding}
-%\include{chapters/Chapter9-channel-coding}
+\include{chapters/Chapter9-channel-coding}
 
 %----------------------------------------------------------------------------------------
 %	BIBLIOGRAPHY
