--- a/structure.tex
+++ b/structure.tex
@@ -204,7 +204,8 @@
 %----------------------------------------------------------------------------------------
 
 \usepackage{amsmath,amsfonts,amssymb,amsthm} % For math equations, theorems, symbols, etc
-
+\DeclareMathOperator*{\argmin}{argmin}   
+\DeclareMathOperator*{\argmax}{argmax}   
 \newenvironment{solution}
   {\begin{proof}[Solution]}
   {\renewcommand{\qedsymbol}{\textcolor{ocre}{$\blacksquare$}}\end{proof}}
