--- a/bibliography.bib
+++ b/bibliography.bib
@@ -39,6 +39,19 @@
   volume = {10},
   pages = {261--273}
 }
+@inproceedings{elias1955coding,
+  title={Coding for two noisy channels},
+  author={Elias, Peter},
+  booktitle={Information Theory, 3rd London Symposium, London, England, Sept. 1955},
+  year={1955}
+}
+
+@book{Fano_61,
+  title={Transmission of Information: A Statistical Theory of Communication MIT Press},
+  author={Fano, Robert M},
+  publisher={Cambridge, Mass. and Wiley, New York},
+  year={1961}
+}
 
 @book{Feinstein_58,
   author = {Feinstein, A.},
@@ -83,6 +96,14 @@
   year = 2001,
   month = Nov,
 }
+
+@book{hill1986first,
+  title={A first course in coding theory},
+  author={Hill, Raymond},
+  year={1986},
+  publisher={Oxford University Press}
+}
+
 @article{huffman1952method,
   title={A method for the construction of minimum-redundancy codes},
   author={Huffman, David A},
@@ -103,6 +124,12 @@
   volume={7}, 
   number={2}, 
   pages={118}, 
+}
+@article{lomnitz2012simpler,
+  title={A simpler derivation of the coding theorem},
+  author={Lomnitz, Yuval and Feder, Meir},
+  journal={arXiv preprint arXiv:1205.1389},
+  year={2012}
 }
 @book{mackay2003information,
   title={Information theory, inference and learning algorithms},
